learning/python/003-ropsten/nohup.out
  File "c-ropsten.py", line 2923
    for acc in accounts:
    ^
IndentationError: unexpected indent
  File "c-ropsten.py", line 2923
    for acc in accounts:
    ^
IndentationError: unexpected indent
